removed dependecy for jquery-ui. Added jquery-resizable, and fixed chrome scrollbar bug.

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,14 @@
 	margin:0;
 	padding:0;
 	height:100%;
-	overflow:hidden;
+}
+
+.scrollbar-measure {
+	width: 100px;
+	height: 100px;
+	overflow: scroll;
+	position: absolute;
+	top: -9999px;
 }
 
 .main-toolbar{
@@ -29,29 +36,33 @@
 	width:30%;
 	height:100%;
 	background-color: orange;
-	overflow-y:scroll;
 }
 .main-code {
-	height:inherit;
 	width:70%;
 	height:100%;
-	background-color:greenyellow;
 	float:left;
+	display: -webkit-flex;
+	display: flex;
+	flex-direction:row;
+	background-color:greenyellow;
+	overflow:hidden;
 }
 .text-render{
-	height:100%;
-	width:50%;
 	float:left;
 	background-color:green;
 	display:inline;
-	overflow-y:scroll;
+	overflow-y:auto;
+	width:50%;
+	flex: 0 0 auto;
+	min-width:30px;
+	max-width:100%;
 }
 .cube-render{
 	height:100%;
-	width:50%;
 	display:inline;
 	float:right;
 	background-color:pink;
+	flex: 1 1 auto;
 }
 .compiled-commands{
 	height:10%;
